--- a/style.css
+++ b/style.css
@@ -847,7 +847,7 @@ footer {
   position: absolute;
   top: 0; left: 0; width: 100%; height: 100%;
   object-fit: contain;
-  background: #000; /* Cambia el color si lo deseas, o elimínalo */
+  background: linear-gradient(135deg, #222 40%, #ff7f00 100%); /* Cambia el color si lo deseas, o elimínalo */
   opacity: 0;
   transition: opacity 1.3s cubic-bezier(.7,.2,.2,1);
   z-index: 2;
