--- a/style.css
+++ b/style.css
@@ -1763,6 +1763,7 @@ Y si quieres un botón de WhatsApp destacado en el menú:
   box-shadow: 0 2px 14px #0002;
   min-height: 350px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: left;
@@ -1776,6 +1777,9 @@ Y si quieres un botón de WhatsApp destacado en el menú:
     width: 100%;
     border-radius: 1.5vw;
     min-height: 120px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
   }
   .hero-slide-img img {
     height: 180px;
