--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 .header {
   background: linear-gradient(90deg, var(--gris) 0%, var(--gris) 50%, var(--naranja) 50%, var(--naranja) 100%);
   color: var(--gris);
-  padding: 0.2rem 0;
+  padding: 0.1rem 0;
   position: sticky;
   top: 0;
   z-index: 1000;
@@ -37,6 +37,7 @@ body {
   max-width: 800px;
   margin: 0 auto;
   padding: 0 2vw;
+  min-height: 56px;
 }
 
 .logo {
