--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
   z-index: 1;
 }
 .header {
-   background: url('imagenes/dibujo-continuo-linea-coche-deportivo.jpg') center center/cover no-repeat, #fff !important;
+   background: url('WhatsApp Image 2025-06-03 at 4.27.04 PM.jpeg') center center/cover no-repeat, #fff !important;
   position: relative;
   top: 0;
   left: 0;
