--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body {
 }
 
 .nav-list li a {
-  color: var(--blanco);
+  color: var(--naranja);
   text-decoration: none;
   font-weight: 500;
   font-size: 1.13em;
