--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   z-index: 1;
 }
 .header {
-   background: url('WhatsApp Image 2025-06-03 at 4.27.04 PM.jpeg') center center/cover no-repeat, #fff !important;
+   background: url('imagenes/4aeb592a-c58b-4586-88d1-22d365d6f980.jpeg') center center/cover no-repeat, #fff !important;
   position: relative;
   top: 0;
   left: 0;
