--- a/style.css
+++ b/style.css
@@ -36,14 +36,14 @@ body {
   z-index: 1;
 }
 .header {
-   background: url('imagenes/IMG_3421.jpeg') left center/cover no-repeat, #fff !important;
-  position: relative;
+   background: url('imagenes/IMG_3421.jpeg') top center/cover no-repeat, #fff !important;
+  position: relative !important;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 30;
   box-shadow: 0 2px 9px #0002;
-  min-height: 100px; /* Ajusta según sea necesario */
+  min-height: 100px ; /* Ajusta según sea necesario */
 }
 
 .logo-nav {
@@ -1151,7 +1151,7 @@ footer {
 .header {
   box-shadow: 0 2px 9px #0002;
   background: rgba(255,255,255,0.95);
-  position: sticky;
+  position: relative;
   top: 0; left: 0; width: 100%;
   z-index: 30;
   transition: background 0.3s;
