--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   z-index: 1;
 }
 .header {
-   background: url('imagenes/IMG_3417.jpeg')  right center 10px/auto no-repeat, #fff !important;
+   background: url('imagenes/IMG_3417.jpeg')  right center /auto no-repeat, #fff !important;
   position: relative !important;
   top: 0;
   left: 0;
