--- a/style.css
+++ b/style.css
@@ -730,6 +730,7 @@ footer {
   outline: none;
   transition: border 0.2s;
   background: #fafafa;
+  margin: 10px 5px;
 }
 .campo-form input:focus,
 .campo-form textarea:focus {
