--- a/style.css
+++ b/style.css
@@ -695,7 +695,7 @@ footer {
 .contacto-formulario {
   background: var(--blanco);
   max-width: 600px;
-  margin: 2em 2em 3em 2em;
+  margin: 2em auto 3em auto;
   padding: 4em;
   border-radius: 1em;
   box-shadow: 0 2px 10px #0001;
@@ -730,7 +730,7 @@ footer {
   outline: none;
   transition: border 0.2s;
   background: #fafafa;
-  margin: 10px 0;
+  margin: 20px 10px;
 }
 .campo-form input:focus,
 .campo-form textarea:focus {
