--- a/style.css
+++ b/style.css
@@ -730,7 +730,7 @@ footer {
   outline: none;
   transition: border 0.2s;
   background: #fafafa;
-  margin: 10px 0 !important;
+  margin: 10px 10px !important;
 }
 .campo-form input:focus,
 .campo-form textarea:focus {
