--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
   --gris-claro: #f7f7f7;
   --blanco: #fff;
   --azul-claro: #d6eaff;
-  --azul-marino: #0000ff;
-  --rojo: #ff0000;
+  --azul: #0000ff;
+  --azul-marino: #00fff0;
 }
 
 /* ======================= */
