--- a/style.css
+++ b/style.css
@@ -2496,7 +2496,7 @@ Y si quieres un botón de WhatsApp destacado en el menú:
     left: 0;
     width: 100%;
     height: 300px; /* Misma altura que tu encabezado */
-    background-image: url('ruta-de-tu-imagen.jpg');
+    background-image: url('imagenes/IMG_3417.jpeg')!important;
     background-size: 120% 120%;
     background-position: center;
     z-index: -1; /* Asegúrate de que esté detrás del contenido */
